--- a/src/style.css
+++ b/src/style.css
@@ -2,5 +2,9 @@ body {
     margin: 0;
     height: 100vh;
     overflow: hidden;
-    background: linear-gradient(#f4c9fe, #afa9ff);
+}
+
+#container {
+    width: 100%;
+    height: 100%;
 }
